--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mailersend": "^2.6.0",
     "nodemailer": "^8.0.1",
     "stripe": "^14.10.0"
   }
