Actualizar .env.example y UI home

--- a/server/.env.example
+++ b/server/.env.example
@@ -6,7 +6,15 @@ STRIPE_SECRET_KEY=sk_test_your_secret_key_here
 # Se obtiene al configurar webhooks en Stripe Dashboard
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 
-# Email (Gmail): correo que envía y contraseña de aplicación (App Password)
+# Email: MailerSend (recomendado, mismo ecosistema que MailerLite) o Gmail SMTP
+# Opción A - MailerSend (recomendado para producción; evita timeouts en Railway)
+# Crear cuenta en https://www.mailersend.com (puedes usar SSO con MailerLite)
+# API Key en MailerSend: Domains → API Tokens. El "from" debe ser un email de dominio verificado.
+MAILERSEND_API_KEY=mlsn.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+MAILERSEND_FROM_EMAIL=info@estudiopopnest.com
+MAILERSEND_FROM_NAME=Estudio Popnest Wellness
+
+# Opción B - Gmail SMTP (si no usas MailerSend)
 # Crear App Password en https://myaccount.google.com/apppasswords
 SMTP_MAIL_USER=tu-correo@estudiopopnest.com
 SMTP_MAIL_APP_PASSWORD=xxxx xxxx xxxx xxxx
